--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ jupyter>=1.0.0
 jupyterthemes>=0.20.0
 matplotlib>=3.4.3
 numpy>=1.20.3
+pyparsing<3,>=2.0.2  # May not work for non MacOs
 pandas>=1.3.3
 PyYAML>=5.4.1
 seaborn>=0.11.2
