--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ jsonschema>=3.2.0
 jupyter>=1.0.0
 jupyterthemes>=0.20.0
 matplotlib>=3.4.3
+nbstripout>=0.3.10
 numpy>=1.20.3
 pyparsing<3,>=2.0.2  # May not work for non MacOs
 pandas>=1.3.3
