Rename Project and contents to correspond to new dataset

--- a/confs/prototype1.yml
+++ b/confs/prototype1.yml
@@ -2,5 +2,5 @@ tag: prototype_1
 data_loader:
   config:
     dataset:
-      url: https://www.kaggle.com/janiobachmann/credit-fraud-dealing-with-imbalanced-datasets/data?select=creditcard.csv
+      url: https://www.kaggle.com/sobhanmoosavi/us-accidents
       loader: kaggle
