Added the exploratory commands from the Google Collab notebook #5

--- a/confs/prototype1.yml
+++ b/confs/prototype1.yml
@@ -2,5 +2,6 @@ tag: prototype_1
 data_loader:
   config:
     dataset:
-      url: https://www.kaggle.com/sobhanmoosavi/us-accidents
-      loader: kaggle
+      kaggle_dataset_name: sobhanmoosavi/us-accidents
+      local_dataset_name: data/US_Accidents_Dec20_updated.csv
+      download: True
