--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.ipynb filter=nbstripout
 *.zpln filter=nbstripout
 *.ipynb diff=ipynb
+data/US_Accidents_Dec20_updated.csv filter=lfs diff=lfs merge=lfs -text
