--- a/confs/prototype1.yml
+++ b/confs/prototype1.yml
@@ -5,3 +5,33 @@ data_loader:
       kaggle_dataset_name: sobhanmoosavi/us-accidents
       local_dataset_name: data/US_Accidents_Dec20_updated.csv
       download: True
+    preprocessing:
+      city_list:
+        - Phoenix
+        - Los Angeles
+        - New York
+        - Philadelphia
+        - Houston
+        - Chicago
+      state_list:
+        - AZ
+        - CA
+        - NY
+        - PA
+        - TX
+        - IL
+      env_vars:
+        - Weather_Timestamp
+        - Temperature(F)
+        - Wind_Chill(F)
+        - Humidity(%)
+        - Pressure(in)
+        - Visibility(mi)
+        - Wind_Direction
+        - Wind_Speed(mph)
+        - Precipitation(in)
+        - Weather_Condition
+        - Sunrise_Sunset
+        - Civil_Twilight
+        - Nautical_Twilight
+        - Astronomical_Twilight
