--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ nbstripout>=0.3.10
 numpy>=1.20.3
 pyparsing<3,>=2.0.2  # May not work for non MacOs
 pandas>=1.3.3
+prettytable>=2.4.0
 PyYAML>=5.4.1
 seaborn>=0.11.2
 setuptools>=52.0.0
